# MockAPI

./: .dockerignore  .gitignore  README.md  app.py  docker-compose.yaml  pyproject.toml
cfg/: local.yaml  settings.yaml
db/: README.md
db/migrations/: env.py
db/migrations/versions/: 17b567059d59_add_user_fields.py  421806797588_.py  5db745475346_.py  76f056ac3139_.py  88f9cf1195cb_deleted_test_table.py  d4df1ec630f0_initial_migration.py  e06ff6dbb9d4_.py
ops/: Dockerfile
src/: __init__.py
src/i18n/: en-EN.yaml  ru-RU.yaml
src/lib/: arguments.py  constants.py  docs.py  i18n.py  schemas.py  utils.py  validation.py
src/models/: user.py
src/views/: __init__.py  swagger.py  user.py
tests/: test_user.py
